# N-body-simulation

./: CMakeLists.txt  LICENSE  README.md  main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/math/: vec2.hpp  vec3.hpp
src/physics/: body.hpp  n_body_system.cpp  n_body_system.hpp
src/renderer/: renderer.cpp  renderer.hpp
